# blerpsblerg

./: .prettierignore  Cargo.toml  package.json  tsconfig.json
frontend/: craco.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Navbar.tsx  TextEditor.tsx
frontend/src/components/editor/: EditorCommands.tsx  Elements.tsx  Leaf.tsx
frontend/src/components/editor/elements/: ParagraphElement.tsx  TypographyElement.tsx
server/src/: main.rs
