[package]
name = "blerpsblerg"
version = "0.1.0"
authors = ["Black-Tomcat <tomcat.frantz@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "server/src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
env_logger = "0.8"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.15.5"
neo4rs = "0.5.8"
